# finance_dashboard

./: .env.example  LICENSE  README.md  TEST_PLAN.md  alembic.ini  analysis.py  app.py  create_dirs.ps1  data_collector.py  database.py  import_portfolio.py  init_db.py  init_test_data.py  plan.txt  portfolio.csv  portfolio_export.csv  pyproject.toml  requirements-test.txt  requirements.txt  start_finance_dashboard.bat  style.css  view_db.py  yaml_exporter.py
Analysis/27May2025/: BB.TO_analysis.yaml  GOOG.TO_analysis.yaml  REI-UN.TO_analysis.yaml  XEQT.TO_analysis.yaml
app/: main.py
app/config/: logging_config.py  settings.py
app/database/: session.py
app/database/models/: base.py  market_data.py  portfolio.py
app/database/repositories/: base.py  portfolio.py
app/domain/entities/: portfolio.py
app/domain/services/: portfolio_service.py
app/ui/components/: __init__.py  base.py  cards.py  charts.py  forms.py
app/ui/components/layout/: base.py  grid.py  sidebar.py  tabs.py
app/ui/theme/: __init__.py  utils.py
debug/: __init__.py  aapl_test.yaml  check_stock_data.py  cleanup_db.py  cleanup_market_data.py  clear_database.py  debug_db.py  remove_position.py  test_aapl_yaml.py  test_yaml.py  test_yaml_mapping.py  update_market_data.py
docs/: MODULAR_PLAN.md  TEST_PLAN.md
migrations/: env.py
scripts/: run_migrations.py
tests/: README.md  __init__.py  conftest.py
tests/unit/: test_database.py  test_database_operations.py  test_market_data_management.py  test_portfolio_management.py  test_position_management.py  test_price_history.py
